# Sobachka

./: CMakeLists.txt  Main.cpp  README.txt
Controller/: abstract_controller.h  controller.cpp  controller.h
Model/: model.cpp  model.h
Model/Client/: cheating_clients.cpp  cheating_clients.h  clients.cpp  clients.h  honorable_clients.cpp  honorable_clients.h  human.cpp  human.h
View/: view.cpp  view.h
Visitor/: remove_visitor.cpp  remove_visitor.h
